package bird;

public class Eagle extends Bird implements Eat, Fly, SaySomething{
    public void eat() {

    }

    public void fly() {

    }

    public void saySomething() {

    }
}
