package bird;

public interface Eat {
    void eat();
}
