package bird;

public class Pigeon extends Bird implements Fly{
    public void fly() {

    }

}
