package bird;

public class PigeonSparrowFlyingBehaviour implements FlyingBehaviour{
    public void flyingBehaviour() {

    }
}

